styles: fix code blocks spacing

--- a/static/styles/prism-theme.css
+++ b/static/styles/prism-theme.css
@@ -26,7 +26,6 @@ pre[class*='language-'] {
 /* Code blocks */
 pre[class*='language-'] {
   padding: 1em;
-  margin: 0.5em 0;
   overflow-x: auto;
 }
 
